--- a/contact.html
+++ b/contact.html
@@ -44,22 +44,37 @@
     <!-- Topbar Start -->
     <div class="container-fluid bg-dark p-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="row gx-0 d-none d-lg-flex">
-            <div class="col-lg-7 px-5 text-start">
+            <div class="col-lg-9 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-3">
-                    <a class="text-body px-2" href="tel:+0123456789"><i class="fa fa-phone-alt text-primary me-2"></i>+012 345 6789</a>
-                    <a class="text-body px-2" href="mailto:info@example.com"><i class="fa fa-envelope-open text-primary me-2"></i>info@example.com</a>
+                    <a
+                        href="https://www.google.com/maps/place/Legal+Raasta+Technologies+Private+Limited/@28.699307,77.1170229,16z/data=!4m10!1m2!2m1!1sLegalRaasta+Technologies+Pvt+Ltd!3m6!1s0x390d03c53679bedb:0x3624ba574fcc7425!8m2!3d28.699307!4d77.1239517!15sCiBMZWdhbFJhYXN0YSBUZWNobm9sb2dpZXMgUHZ0IEx0ZCIDiAEBkgEObGVnYWxfc2VydmljZXPgAQA!16s%2Fg%2F11c0xvwdmk">
+                        <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>B-300 Saraswati
+                            Vihar,Pitampura, New Delhi-110034</small>
+                    </a>
+                    <a href="tel:+918750008585">
+                        <small class="me-3 text-light"><i class="fa fa-phone me-2"></i>+918750008585</small></a>
+
+
+                    <a href="mailto: Sales@thewhiteworth.com">
+                        <small class="text-light"><i class="fa fa-envelope-open me-2"></i>
+                            Sales@thewhiteworth.com</small></a>
                 </div>
             </div>
-            <div class="col-lg-5 px-5 text-end">
-                <div class="h-100 d-inline-flex align-items-center py-3 me-2">
-                    <a class="text-body px-2" href="">Terms</a>
-                    <a class="text-body px-2" href="">Privacy</a>
-                </div>
+            <div class="col-lg-3 px-5 text-end">
+
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square btn-outline-body me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm btn-outline-light alert-primary btn-sm-square rounded-circle me-2"
+                        href="https://twitter.com/RaastaLegal" aria-label="twitter link"><i
+                            class="fab fa-twitter fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-primary btn-sm-square rounded-circle me-2"
+                        href="https://www.facebook.com/LRaasta" aria-label="facebook"><i
+                            class="fab fa-facebook-f fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light  btn-primary btn-sm-square rounded-circle me-2"
+                        href="https://www.linkedin.com/company/legalraasta/mycompany/" aria-label="linkedin"><i
+                            class="fab fa-linkedin-in fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-danger btn-light  btn-sm-square rounded-circle me-2"
+                        href="https://www.instagram.com/legal.raasta/" aria-label="instagram"><i
+                            class="fab fa-instagram fw-normal"></i></a>
                 </div>
             </div>
         </div>
@@ -68,32 +83,40 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+    <nav class="navbar navbar-expand-lg bg-dark text-white navbar-light py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="text-primary m-0"><img class="me-3" src="img/icons/icon-1.png" alt="Icon">Arkitektur</h1>
+            <h1 class="m-0 d-flex flex-row"><img class="me-1 ms-2  position-sticky" src="img/White-2 (1).png"
+                    width="230" height="80" loading="lazy" alt="Icon">
+            </h1>
         </a>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
+        <button type="button" class="navbar-toggler me-4" aria-label="hamburger" data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse">
+            <span class="fa fa-bars text-white"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
+                <a href="index.html" class="nav-item nav-link text-white">Home</a>
+                
+                <!-- <a href="service.html" class="nav-item nav-link text-white"></a>
+                <a href="service2.html" class="nav-item nav-link text-white">Services 2</a> -->
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown">Service Page</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="feature.html" class="dropdown-item">Our Features</a>
-                        <a href="project.html" class="dropdown-item">Our Projects</a>
-                        <a href="team.html" class="dropdown-item">Team Members</a>
-                        <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <!-- <a href="vat-registeration.html" class="dropdown-item">Vat Registeration</a> -->
+                        <a href="sitemap.html" class="dropdown-item">Sitemap</a>
+                        <a href="corporate-tax-uae.html" class="dropdown-item">Corporate Tax</a>
+                        <a href="professional-license-dubai-uae.html" class="dropdown-item">Professional License</a>
+                        <a href="company-formation-cost-dubai-uae.html" class="dropdown-item ">Company Formation in UAE</a>
+                        <a href="how-to-start-business-dubai-free-zone.html" class="dropdown-item ">Establishing a business in Dubai
+                            Free Zone</a>
+                        <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a> -->
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                <a href="about.html" class="nav-item nav-link text-white ">About</a>
+                <a href="contact.html" class="nav-item nav-link text-white">Contact</a>
             </div>
-            <a href="https://htmlcodex.com/architecture-html-template-pro" class="btn btn-primary py-2 px-4 d-none d-lg-block">Pro Version</a>
+
         </div>
     </nav>
     <!-- Navbar End -->
