--- a/how-to-start-business-dubai-free-zone.html
+++ b/how-to-start-business-dubai-free-zone.html
@@ -92,42 +92,44 @@
     <!-- Topbar End -->
 
 
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-dark text-white navbar-light py-lg-0 px-lg-5">
-        <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="m-0 d-flex flex-row"><img class="me-1 ms-2  position-sticky" src="img/White-2 (1).png"
-                    width="230" height="80" loading="lazy" alt="Icon">
-            </h1>
-        </a>
-        <button type="button" class="navbar-toggler me-4" aria-label="hamburger" data-bs-toggle="collapse"
-            data-bs-target="#navbarCollapse">
-            <span class="fa fa-bars text-white"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link text-white">Home</a>
-                <a href="about.html" class="nav-item nav-link text-white ">About</a>
-                <!-- <a href="service.html" class="nav-item nav-link text-white"></a>
-                <a href="service2.html" class="nav-item nav-link text-white">Services 2</a> -->
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown">Service Page</a>
-                    <div class="dropdown-menu border-0 m-0">
-                        <a href="vat-registeration.html" class="dropdown-item">Vat Registeration</a>
-                        <a href="corporate-tax.html" class="dropdown-item">Corporate Tax</a>
-                        <a href="team.html" class="dropdown-item">Team Members</a>
-                        <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="sitemap.html" class="dropdown-item">Sitemap</a>
-                        <a href="company-formation-cost-uae.html" class="dropdown-item ">Company Formation in UAE</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
+   <!-- Navbar Start -->
+   <nav class="navbar navbar-expand-lg bg-dark text-white navbar-light py-lg-0 px-lg-5">
+    <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
+        <h1 class="m-0 d-flex flex-row"><img class="me-1 ms-2  position-sticky" src="img/White-2 (1).png"
+                width="230" height="80" loading="lazy" alt="Icon">
+        </h1>
+    </a>
+    <button type="button" class="navbar-toggler me-4" aria-label="hamburger" data-bs-toggle="collapse"
+        data-bs-target="#navbarCollapse">
+        <span class="fa fa-bars text-white"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="navbar-nav ms-auto p-4 p-lg-0">
+            <a href="index.html" class="nav-item nav-link text-white">Home</a>
+            
+            <!-- <a href="service.html" class="nav-item nav-link text-white"></a>
+            <a href="service2.html" class="nav-item nav-link text-white">Services 2</a> -->
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown">Service Page</a>
+                <div class="dropdown-menu border-0 m-0">
+                    <!-- <a href="vat-registeration.html" class="dropdown-item">Vat Registeration</a> -->
+                    <a href="sitemap.html" class="dropdown-item">Sitemap</a>
+                    <a href="corporate-tax-uae.html" class="dropdown-item">Corporate Tax</a>
+                    <a href="professional-license-dubai-uae.html" class="dropdown-item">Professional License</a>
+                    <a href="company-formation-cost-dubai-uae.html" class="dropdown-item ">Company Formation in UAE</a>
+                    <a href="how-to-start-business-dubai-free-zone.html" class="dropdown-item ">Establishing a business in Dubai
+                        Free Zone</a>
+                    <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                    <a href="404.html" class="dropdown-item">404 Page</a> -->
                 </div>
-                <a href="contact.html" class="nav-item nav-link text-white">Contact</a>
             </div>
-
+            <a href="about.html" class="nav-item nav-link text-white ">About</a>
+            <a href="contact.html" class="nav-item nav-link text-white">Contact</a>
         </div>
-    </nav>
-    <!-- Navbar End -->
+
+    </div>
+</nav>
+<!-- Navbar End -->
     <!-- Page Header End -->
 
     <div class="container-fluid page-header pt-5 pb-3 mb-3 wow fadeIn" data-wow-delay="0.1s">
