--- a/index.html
+++ b/index.html
@@ -95,24 +95,25 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link text-white ">About</a>
+                <a href="index.html" class="nav-item nav-link text-white">Home</a>
+                
                 <!-- <a href="service.html" class="nav-item nav-link text-white"></a>
                 <a href="service2.html" class="nav-item nav-link text-white">Services 2</a> -->
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown">Service Page</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="vat-registeration.html" class="dropdown-item">Vat Registeration</a>
-                        <a href="corporate-tax.html" class="dropdown-item">Corporate Tax</a>
-                        <a href="team.html" class="dropdown-item">Team Members</a>
-                        <a href="appointment.html" class="dropdown-item">Appointment</a>
+                        <!-- <a href="vat-registeration.html" class="dropdown-item">Vat Registeration</a> -->
                         <a href="sitemap.html" class="dropdown-item">Sitemap</a>
-                        <a href="company-formation-cost-uae.html" class="dropdown-item ">Company Formation in UAE</a>
-                        <!-- <a href="dubai-free-zone.html" class="dropdown-item active">Establishing a business in Dubai Free Zone</a> -->
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="corporate-tax-uae.html" class="dropdown-item">Corporate Tax</a>
+                        <a href="professional-license-dubai-uae.html" class="dropdown-item">Professional License</a>
+                        <a href="company-formation-cost-dubai-uae.html" class="dropdown-item ">Company Formation in UAE</a>
+                        <a href="how-to-start-business-dubai-free-zone.html" class="dropdown-item ">Establishing a business in Dubai
+                            Free Zone</a>
+                        <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a> -->
                     </div>
                 </div>
+                <a href="about.html" class="nav-item nav-link text-white ">About</a>
                 <a href="contact.html" class="nav-item nav-link text-white">Contact</a>
             </div>
 
